--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -23,6 +23,10 @@
 				"GerenciadorDeColisoes.cpp",
 				"Menu.cpp",
 				"Lama.cpp",
+				"GerenciadorGrafico.cpp",
+				"Militar1.cpp",
+				"Mina.cpp",
+				"Militar2.cpp",
 				"-I",
 				"/opt/homebrew/Cellar/sfml/2.5.1_1/include",
 				"-o",
