Agora temos duas fases que podem ser selecionadas no menu

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -29,6 +29,7 @@
 				"Militar2.cpp",
 				"Ente.cpp",
 				"Lista.cpp",
+				"FaseDeserto.cpp",
 				"-I",
 				"/opt/homebrew/Cellar/sfml/2.5.1_1/include",
 				"-o",
